# p2o

./: CMakeLists.txt  README.md  p2o.h
docker/: Dockerfile  README.md  launch_p2o_viewer.sh
include/: p2o.h
p2o_viewer/: CMakeLists.txt  README.md  load_p2o_file.cpp  load_p2o_file.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
samples/: CMakeLists.txt  build_and_run_p2o.sh  plot_data.plt  sample_run_p2o.cpp  test_p2o.cpp
samples/data/cit_tsudanuma2020/: CIT_2020_odom_gnss.plt  kgeom3d.py  sample_p2o_from_rosbag.py
src/: p2o.cpp
utils/: gen_p2o_from_fastlio_rosbag.py  kgeom3d.py
